--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -15,6 +15,8 @@ const { title } = Astro.props as Props;
     <title>{title}</title>
   </head>
   <body>
+    <a href="/">Home</a>
+    <a href="/contact">Contact</a>
     <slot />
   </body>
 </html>
